tests/ui/conflicting_clone.stderr
error[E0119]: conflicting implementations of trait `std::clone::Clone` for type `Foo`
 --> $DIR/conflicting_clone.rs:3:10
  |
3 | #[derive(PureClone)]
  |          ^^^^^^^^^ conflicting implementation for `Foo`
...
6 | impl Clone for Foo {
  | ------------------ first implementation here
  |
  = note: this error originates in the derive macro `PureClone` (in Nightly builds, run with -Z macro-backtrace for more info)
